--- a/bot/package.json
+++ b/bot/package.json
@@ -12,7 +12,8 @@
   "author": "Joe Bullard",
   "dependencies": {
     "@google-cloud/translate": "^0.8.1",
-    "botkit": "^0.5.2"
+    "botkit": "^0.5.2",
+    "node-env-file": "^0.1.8"
   },
   "devDependencies": {},
   "license": "ISC"
