--- a/bot/package.json
+++ b/bot/package.json
@@ -1,8 +1,8 @@
 {
   "name": "slack-translate-bot",
   "version": "0.1.0",
-  "description": "Translation bot for Slack.",
-  "main": "translate-bot.js",
+  "description": "Translation bot for Slack",
+  "main": "index.js",
   "keywords": [
     "Google",
     "Translate",
@@ -10,12 +10,31 @@
     "Slackbot"
   ],
   "author": "Joe Bullard",
+  "scripts": {
+    "start": "nodemon --exec babel-node ./src/index.js",
+    "test": "jest",
+    "lint": "eslint ./src"
+  },
   "dependencies": {
     "@google-cloud/translate": "^0.8.1",
-    "botkit": "^0.5.2"
+    "botkit": "^0.5.2",
+    "dotenv": "^6.1.0"
   },
   "devDependencies": {
-    "dotenv": "^4.0.0"
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.0.0",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.6",
+    "regenerator-runtime": "^0.13.1",
+    "yarn": "^1.12.3"
   },
   "license": "GPL-3.0",
   "repository": {
